# cmake-test

./: CMakeLists.txt  lib.c  lib.h  test1.c
libhello/: CMakeLists.txt  libhello.c  libhello.h
src/: CMakeLists.txt  hello.c
tests/test-sub/: CMakeLists.txt
tests/test-sum/: CMakeLists.txt  test_sum.c
